--- a/pom.xml
+++ b/pom.xml
@@ -45,20 +45,57 @@
             </plugin>
         </plugins>
     </build>-->
+        
     <build>
-        <plugins>
+        <finalName>Servidor</finalName>
+        <plugins>        
             <plugin>
-                <groupId> org.apache.maven.plugins </groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>3.0.2</version>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-eclipse-plugin</artifactId>
+                <version>2.9</version>
                 <configuration>
+                    <downloadSources>true</downloadSources>
+                    <downloadJavadocs>false</downloadJavadocs>
+                </configuration>
+            </plugin>           
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.10.1</version>
+                <configuration>
+                    <!--                    //Versión de JDK con la cual se ha construido el proyecto
+                    // 1.8 significa que se utilizó Java8-->
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>    
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>2.4.1</version>
+                <configuration>            
+                    <descriptorRefs>
+                        <!--                        Sufijo que se le agregara al fichero JAR ejecutable-->
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>           
                     <archive>
                         <manifest>
-                            <mainClass>midik/sockets/Servidor</mainClass>
+                            <!--                            Aqui se establece el nombre de la clase principal-->
+                            <mainClass>midik.sockets.Servidor</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id>
+                        <phase>package</phase> 
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
+
 </project>
